done with this task

--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,12 @@
     <section class="restaurant">
     </section>
 
+    <!-- Roman_hotels -->
+
+    <ul id="hotel-properties"></ul>
+
+    <ul id="hoter-info"></ul>
+   
+
   </body>
 </html>
