добавляет кусочек достопримечательностей

--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,38 @@
   </head>
 
   <body>
-
-    <section class="flight">
+    <!-- <section class="flight">
       <h2>FLIGHT</h2>
       <form action="" id="js-form">
-        <input type="text" name="" id="from">
+        <input type="text" name="" id="from" />
         <select name="from" id="from-select">
           <option value="">Waiting for airports</option>
         </select>
-        <input type="text" name="" id="to">
+        <input type="text" name="" id="to" />
         <select name="to" id="to-select">
           <option value="">Waiting for airports</option>
         </select>
       </form>
       <button id="search">Search</button>
       <ul id="flight-list"></ul>
-    </section>
+    </section> -->
 
-  <!-- AND OTHERS -->
-    <section class="restaurant">
-    </section>
+    <!-- AND OTHERS -->
+    <section class="restaurant"></section>
 
+    <!-- <section class="attractions">
+      <h2>Attractions</h2>
+      <form id="attract-form">
+        <input
+          type="search"
+          title="Поиск"
+          placeholder="Where are you going?"
+          aria-label="Поиск"
+        />
+      </form> -->
+      <!-- <button id="search">Search</button> -->
+      <ul id="attraction-items"></ul>
+      <ul id="attraction-details"></ul>
+    </section>
   </body>
 </html>
